# piedge_edukit_microlesson

./: .env.example  .gitattributes  .gitignore  DATA_LICENSES.md  LICENSE  README.md  index.html  main.py  pyproject.toml  requirements.txt  run_lesson.bat  run_lesson.sh  setup_venv.sh  verify.py
.github/workflows/: ci.yml
notebooks/: 00_run_everything.ipynb  00_run_everything_PRETTY.ipynb  00_run_everything_executed_pretty.ipynb  00_run_everything_executed_smoke.ipynb
progress/: lesson_progress.json
scripts/: clean_notebook_ids.py  demo_pretty.bat  demo_pretty.sh  evaluate_onnx.py  fix_language_notebooks.py  fix_notebook_celltypes.py  fix_swedish_chars.py  fix_swedish_markdown.py  lint_notebooks.py  nb_sanity_check.py  nb_validate.py  notebook_final_cleanup.py  notebook_sanitize.py  open_notebook_clean.sh  open_report.sh  patch_nb_training_results.py  preflight.py  quick_fix_swedish.py  run_notebook_headless.sh  run_notebook_once.py  run_notebooks.py  setup_venv.sh  test_all.bat  test_all.sh
src/piedge_edukit/: __init__.py  benchmark.py  evaluate_accuracy.py  labels.py  model.py  prepare_model.py  preprocess.py  quantization.py  train.py  verify.py
src/piedge_edukit_microlesson.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
