[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piedge-edukit-microlesson"
version = "0.0.1"
description = "PiEdge EduKit microlesson"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ola Blom"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
